[tool.poetry]
name = "bookcode-edition1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
arviz = "0.17.0"
ipython = "8.16.1"
matplotlib = "3.8.0"
mkl = "2023.1.0"
numpy = "1.24.4"
numba = "0.58.1"
pandas = "2.1.2"
patsy = "0.5.4"
pymc = "5.10.2"
pymc-bart = "0.5.6"
scipy = "1.11.3"
statsmodels = "0.14.1"
tensorflow = "^2.16"
tensorflow-probability = "0.23.0"
xarray = "2023.10.1"
pytensor = "2.18.4"
ipykernel = "6.29.4"
graphviz = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"